--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
-            - run: npm build
+            - run: npm run build
             - run: npm run deploy
 workflows:
     build-and-test:
