--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,25 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
-    steps:
+  build:
+    docker:
+      - image: circleci/node:12.9.1-browsers
+  
+    working_directory: ~/repo
+steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-            - run: npm run build
-            - run: npm run deploy
-workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+      
+      - restore_cache:
+        keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
+      
+      - run: yarn install
+   
+      - save_cache:
+        paths:
+          - node_modules
+          - ~/.npm 
+          - ~/.cache
+        key: v1-dependencies-{{ checksum "package.json" }}
+    
+      - run: yarn test
